apps/ai/ollama-external.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ollama-mac
  name: ollama-mac
  namespace: ai
spec:
  ports:
    - name: http
      port: 11434
      targetPort: 11434
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: ollama-mac
  name: ollama-mac
  namespace: ai
addressType: IPv4
ports:
  - name: http
    port: 11434
    protocol: TCP
endpoints:
  - addresses:
      - 100.101.215.20
    conditions:
      ready: true
