apps/ai/open-webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: open-webui
  name: open-webui
  namespace: ai
spec:
  type: NodePort
  selector:
    app: open-webui
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30810
